--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,7 +9,8 @@
     "build:init": "ncp tsconfig.build.json tsconfig.json && webpack",
     "build": "node scripts/buildServer",
     "build:tsc": "rimraf dist && tsc -p tsconfig.build.json",
-    "start": "ncp tsconfig.dev.json tsconfig.json && cross-env NODE_ENV=development ts-node-dev --project tsconfig.dev.json -r tsconfig-paths/register  --inspect=6590 --respawn src/main.ts",
+    "start": "ncp tsconfig.dev.json tsconfig.json && cross-env NODE_ENV=development ts-node-dev --project tsconfig.dev.json -r tsconfig-paths/register --respawn src/main.ts",
+    "dev": "ncp tsconfig.dev.json tsconfig.json && cross-env NODE_ENV=development ts-node-dev --project tsconfig.dev.json -r tsconfig-paths/register  --inspect=6590 --respawn src/main.ts",
     "format": "prettier --write \"src/**/*.ts\"",
     "start:dev": "tsc-watch -p tsconfig.build.json --onSuccess \"node dist/main.js\"",
     "start:debug": "tsc-watch -p tsconfig.build.json --onSuccess \"node --inspect-brk dist/main.js\"",
