--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -25,7 +25,7 @@
     "@mapbul-pub/codegen": "^1.0.0",
     "@mapbul-pub/common": "^1.0.0",
     "@mapbul-pub/types": "^1.0.0",
-    "@mapbul-pub/ui": "^1.0.0",
+    "@mapbul-pub/utils": "^1.0.0",
     "@nestjs/common": "^6.10.11",
     "@nestjs/core": "^6.10.11",
     "@nestjs/platform-express": "^6.10.11",
