--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -32,6 +32,7 @@
     "app-root-path": "^3.0.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
+    "fs": "0.0.1-security",
     "hbs": "^4.0.6",
     "mysql": "^2.17.1",
     "reflect-metadata": "^0.1.13",
