--- a/packages/admin/.env.dev
+++ b/packages/admin/.env.dev
@@ -1,5 +1,5 @@
 BASE_URL=http://localhost:3100/api
-//IMAGE_URL=http://192.168.0.22:8081
+IMAGE_URL=http://192.168.0.22:8081
 //BASE_URL=https://x-island.com/api
-IMAGE_URL=https://x-island.com
+//IMAGE_URL=https://x-island.com
  
