--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -38,7 +38,8 @@
     "mysql": "^2.17.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
-    "rxjs": "^6.5.3"
+    "rxjs": "^6.5.3",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "@nestjs/testing": "^6.10.11",
@@ -48,6 +49,7 @@
     "@types/mysql": "^2.15.8",
     "@types/node": "12.12.17",
     "@types/supertest": "2.0.8",
+    "@types/uuid": "^8.0.1",
     "cross-env": "^6.0.3",
     "jest": "24.9.0",
     "prettier": "1.19.1",
