--- a/packages/ssr/.env.dev
+++ b/packages/ssr/.env.dev
@@ -4,5 +4,5 @@ BASE_URL_SERVER=http://localhost:3100/api
 // IMAGE_URL=http://192.168.0.22:8081
 // BASE_URL_FRONT=https://x-island.com/api
 // BASE_URL_SERVER=https://x-island.com/api
-IMAGE_URL=https://x-island.com
+IMAGE_URL=http://x-island.com
  
