--- a/Dockerfile.ssr
+++ b/Dockerfile.ssr
@@ -7,6 +7,7 @@ COPY lerna.json .
 COPY packages/common packages/common
 COPY packages/types packages/types
 COPY packages/utils packages/utils
+COPY packages/ui packages/ui
 COPY packages/ssr packages/ssr
 
 RUN npm run bootstrap
