--- a/packages/ssr/package.json
+++ b/packages/ssr/package.json
@@ -5,7 +5,7 @@
     "clean:node_modules": "rimraf node_modules",
     "build": "ncp .env.prod .env && next build",
     "start": "ncp .env.dev .env && next -p 3300",
-    "start:port": "next start -p",
+    "start:prod": "next start -p 3300",
     "type-check": "tsc",
     "test": "jest",
     "test:watch": "jest --watch"
