--- a/Dockerfile.ssr
+++ b/Dockerfile.ssr
@@ -12,4 +12,4 @@ COPY packages/ssr packages/ssr
 
 RUN npm run bootstrap
 EXPOSE 3300
-CMD cd packages/ssr && npm start
+CMD cd packages/ssr && npm run start:prod
