--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -24,6 +24,7 @@
     "@types/app-root-path": "^1.2.4",
     "@types/enzyme": "^3.9.1",
     "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/history": "^4.7.7",
     "@types/isomorphic-fetch": "0.0.35",
     "@types/jest": "^24.0.11",
     "@types/nock": "^9.3.1",
@@ -86,6 +87,7 @@
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.0",
+    "history": "^4.10.1",
     "query-string": "^6.13.1",
     "ra-core": "^3.7.1",
     "react": "^16.8.6",
