--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -36,6 +36,7 @@
     "class-validator": "^0.11.0",
     "fs": "0.0.1-security",
     "hbs": "^4.0.6",
+    "md5": "^2.3.0",
     "mysql": "^2.17.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
@@ -47,6 +48,7 @@
     "@types/app-root-path": "^1.2.4",
     "@types/express": "4.17.2",
     "@types/jest": "24.0.23",
+    "@types/md5": "^2.2.0",
     "@types/mysql": "^2.15.8",
     "@types/node": "12.12.17",
     "@types/supertest": "2.0.8",
