--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -29,6 +29,8 @@
     "@mapbul-pub/utils": "^1.0.0",
     "@nestjs/common": "^6.10.11",
     "@nestjs/core": "^6.10.11",
+    "@nestjs/jwt": "^7.1.0",
+    "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^6.10.11",
     "app-root-path": "^3.0.0",
     "basic-ftp": "^4.6.2",
@@ -38,6 +40,9 @@
     "hbs": "^4.0.6",
     "md5": "^2.3.0",
     "mysql": "^2.17.1",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.3",
@@ -51,6 +56,7 @@
     "@types/md5": "^2.2.0",
     "@types/mysql": "^2.15.8",
     "@types/node": "12.12.17",
+    "@types/passport-local": "^1.0.33",
     "@types/supertest": "2.0.8",
     "@types/uuid": "^8.0.1",
     "cross-env": "^6.0.3",
