--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -56,6 +56,7 @@
     "@types/md5": "^2.2.0",
     "@types/mysql": "^2.15.8",
     "@types/node": "12.12.17",
+    "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
     "@types/supertest": "2.0.8",
     "@types/uuid": "^8.0.1",
