--- a/packages/ssr/package.json
+++ b/packages/ssr/package.json
@@ -44,6 +44,7 @@
     "@types/react-infinite-scroller": "^1.2.1",
     "@types/redux-actions": "^2.6.1",
     "@types/styled-components": "^5.1.0",
+    "awesome-typescript-loader": "^5.2.1",
     "jest": "^24.9.0",
     "next-compose-plugins": "^2.2.0",
     "scub111-common": "^1.0.3",
