--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -20,7 +20,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "set:local": "ncp src/.env.local src/.env",
+    "set:www": "ncp src/.env.www src/.env"
   },
   "dependencies": {
     "@mapbul-pub/codegen": "^1.0.0",
