--- a/packages/admin/.env.dev
+++ b/packages/admin/.env.dev
@@ -1,3 +1,3 @@
 BASE_URL=http://localhost:3100/api
-//BASE_URL=https://x-island.com/api
-IMAGE_URL=https://x-island.com
+//BASE_URL=http://192.168.0.11:3100/api
+IMAGE_URL=http://192.168.0.22:8081
