--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "deploy": "npm i && node scripts/deploy",
     "deploy:beta": "npm run bump-version && npm run routine && git commit -am 'package.lock' && npm run publish:beta",
     "ncu": "ncu && lerna exec -- ncu",
-    "ncu:u": "ncu -u && lerna exec -- ncu -u"
+    "ncu:u": "ncu -u && lerna exec -- ncu -u",
+    "set:local": "lerna run set:local",
+    "set:www": "lerna run set:www"
   },
   "repository": {
     "type": "git",
