--- a/packages/codegen/package.json
+++ b/packages/codegen/package.json
@@ -7,8 +7,8 @@
     "clean:node_modules": "rimraf node_modules",
     "build": "ncp tsconfig.build.json tsconfig.json && npm run clean && webpack",
     "start:prod": "node lib/index.js",
-    "dev": "ncp tsconfig.dev.json tsconfig.json && cross-env NODE_ENV=development ts-node-dev --project tsconfig.dev.json -r tsconfig-paths/register  --inspect=6591 --respawn src/dev.ts",
-    "start": "node scripts/start",
+    "start:dev": "node scripts/start",
+    "start": "ncp tsconfig.dev.json tsconfig.json && cross-env NODE_ENV=development ts-node-dev --project tsconfig.dev.json -r tsconfig-paths/register  --inspect=6591 --respawn src/dev.ts",
     "test-": "jest",
     "set:local": "ncp .env.local .env",
     "set:www": "ncp .env.www .env"
