Improve ssr style

--- a/packages/ssr/package.json
+++ b/packages/ssr/package.json
@@ -15,9 +15,9 @@
   },
   "dependencies": {
     "@mapbul-pub/types": "^1.0.0",
-    "@mapbul-pub/utils": "^1.0.0",
     "@mapbul-pub/ui": "^1.0.0",
-    "@material-ui/core": "^4.8.3",
+    "@mapbul-pub/utils": "^1.0.0",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.5.1",
     "@types/markdown-to-jsx": "^6.9.1",
     "@types/react-redux": "^7.1.6",
@@ -28,8 +28,8 @@
     "markdown-to-jsx": "^6.10.3",
     "material-ui-flat-pagination": "^4.1.0",
     "next": "^9.2.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-infinite-scroller": "^1.2.4",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
@@ -47,6 +47,7 @@
     "@types/redux-actions": "^2.6.1",
     "@types/styled-components": "^5.1.0",
     "awesome-typescript-loader": "^5.2.1",
+    "duplicate-package-checker-webpack-plugin": "^3.0.0",
     "jest": "^24.9.0",
     "next-compose-plugins": "^2.2.0",
     "scub111-common": "^1.0.3",
