--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,76 +4,11 @@
    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
    "version": "0.2.0",
    "configurations": [
-      {
-         "type": "node",
-         "request": "launch",
-         "name": "Запустить программу",
-         "program": "${workspaceFolder}/src/server/main.ts",
-         "outFiles": [
-            "${workspaceFolder}/**/*.js"
-         ]
-      },
-      {
-         "type": "node",
-         "request": "launch",
-         "name": "Node.js",
-         // "program": "${workspaceFolder}/dist/server/main.js",
-         "program": "${workspaceFolder}/src/codegen/index.ts",
-         // "program": "${workspaceFolder}/src/server/main.ts",
-         // "program": "${workspaceFolder}/src/server/express.ts",
-         "outFiles": [
-            "${workspaceFolder}/**/*.js"
-         ]
-      },
-      {
-         "type": "node",
-         "request": "launch",
-         "name": "Debug Nest Framework",
-         "args": [
-            "${workspaceFolder}/src/main.ts"
-         ],
-         "runtimeArgs": [
-            "--nolazy",
-            "-r",
-            "ts-node/register"
-         ],
-         "sourceMaps": true,
-         "cwd": "${workspaceRoot}",
-         "protocol": "inspector"
-      },
-      {
-         "type": "node",
-         "request": "attach",
-         "name": "Typescript Server",
-         // "processId": "${command:PickProcess}",
-         "protocol": "inspector",
-         "port": 9228,
-         "restart": true,
-         "localRoot": "${workspaceFolder}",
-         "remoteRoot": "."
-      },
-      {
-         "type": "node",
-         "request": "launch",
-         "name": "dev",
-         "runtimeExecutable": "nodemon",
-         "runtimeArgs": [
-            "--config",
-            "./nodemon-debug.json"
-         ],
-         "cwd": "${workspaceRoot}",
-         "restart": true,
-         "port": 9228,
-         "env": {
-            "NODE_ENV": "development"
-         },
-         "outputCapture": "std",
-         "console": "integratedTerminal"
-      },
+      //To debug node.js in packages.json click the Debug button next to the scripts area
       {
         "type": "chrome",
         "request": "launch",
-        "name": "Chrome",
+        "name": "Admin via Chrome",
         "url": "http://localhost:3200",
         "webRoot": "${workspaceFolder}/packages/admin"
       },
